--- a/assets/styles/scss/site/_master.scss
+++ b/assets/styles/scss/site/_master.scss
@@ -6,7 +6,7 @@ p.h1, h1, p.h2, h2, p.h3, h3, p.h4, h4, p.h5, h5, p.h6, h6 {
   color: var($text);
 }
 
-a,p,div,input,button,textarea{
+li,a,p,div,input,button,textarea{
   color: var($text-secondary);
 }
 
@@ -31,4 +31,8 @@ section {
   background-color: var($btn-hover)!important;
   border-color: var($btn-hover)!important;
   box-shadow: none!important;
+}
+
+nav {
+  background-color: var($steelgray);
 }
