--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -44,6 +44,7 @@ section {
   box-shadow: none!important;
 }
 /*----------------------------Web-------------------------------*/
+/*----------------------------Navbar-------------------------------*/
 
 /*----------------------------Queries-------------------------------*/
 
