--- a/assets/styles/scss/bundle.scss
+++ b/assets/styles/scss/bundle.scss
@@ -1,7 +1,7 @@
 // modules
 @import 'variables/color';
 // @import 'variables/fonts';
+@import 'components/master';
 @import 'components/navbar';
-@import 'site/master';
 @import 'site/home';
-@import 'site/navbar';
+@import 'components/footer';
