--- a/assets/styles/scss/site/_master.scss
+++ b/assets/styles/scss/site/_master.scss
@@ -3,11 +3,11 @@
 }
 
 p.h1, h1, p.h2, h2, p.h3, h3, p.h4, h4, p.h5, h5, p.h6, h6 {
-  color: var($text);
+  color: $text;
 }
 
 li,a,p,div,input,button,textarea{
-  color: var($text-secondary);
+  color: $text-secondary;
 }
 
 img {
@@ -20,19 +20,19 @@ section {
 }
 
 .btn.btn-primary {
-  background-color: var($primary);
-  border-color: var($primary);
+  background-color: $primary;
+  border-color: $primary;
   border-radius: 0;
   padding: 10px 100px;
   color: #fff;
 }
 
 .btn.btn-primary:hover, .btn.btn-primary:active, .btn.btn-primary:focus{
-  background-color: var($btn-hover)!important;
-  border-color: var($btn-hover)!important;
+  background-color: $btn-hover!important;
+  border-color: $btn-hover!important;
   box-shadow: none!important;
 }
 
 nav {
-  background-color: var($steelgray);
+  background-color: $steelgray;
 }
