--- a/assets/styles/scss/variables/_color.scss
+++ b/assets/styles/scss/variables/_color.scss
@@ -1,11 +1,11 @@
-$primary: #191920;
+$primary: #DEB83D;
 $secondary: #033545;
 $text: #12446e;
 $text-secondary: #425762;
 $text-hover: #191920;
-$btn: #a3a3a3;
-$btn-hover: #a3a3a3;
-
+$btn: #DEB83D;
+$btn-hover: #DEB83D;
+$btn-white:#373948;
 
 $lightestgrey: #F5F5F5;
 $lightergrey: #D3D4D3;
@@ -14,6 +14,8 @@ $darkgrey: #86888C;
 $darkergrey: #50535A;
 $darkestgrey: #313235;
 $steelgray: #2B233A;
+$stylewhite: #E6E6E6;
+
 
 $white: #fff;
 $black: #000;
