--- a/assets/styles/scss/variables/_fonts.scss
+++ b/assets/styles/scss/variables/_fonts.scss
@@ -1,4 +1,17 @@
 @font-face {
+  font-family: Raleway;
+  src: url(../lib/fonts/Raleway/static/Raleway-SemiBold.ttf) format('truetype');
+  font-style: normal;
+  font-weight: 600;
+}
+@font-face {
+  font-family: Raleway;
+  src: url(../lib/fonts/Raleway/static/Raleway-Bold.ttf) format('truetype');
+  font-style: normal;
+  font-weight: 700;
+}
+
+@font-face {
   font-family: Roboto;
   src: url(../lib/fonts/roboto/Roboto-Thin.ttf) format('truetype');
   font-style: normal;
