--- a/assets/styles/scss/variables/_color.scss
+++ b/assets/styles/scss/variables/_color.scss
@@ -1,6 +1,6 @@
 $primary: #DEB83D;
 $secondary: #033545;
-$text: #12446e;
+$text: #373948;
 $text-secondary: #425762;
 $text-hover: #191920;
 $btn: #DEB83D;
