--- a/assets/styles/scss/components/_master.scss
+++ b/assets/styles/scss/components/_master.scss
@@ -18,7 +18,7 @@ img {
 
 section {
   position: relative;
-  // padding: 8vh 0;
+  padding: 8vh 0;
 }
 
 .btn.btn-primary {
@@ -40,6 +40,7 @@ section {
 
 //-------------SECTION IMAGE-CAROUSEL---------------------//
 section#image-carousel{
+  padding:0;
   h1{
     color: $white;
   }
@@ -99,10 +100,29 @@ section#image-carousel{
     outline: none;
   }
 }
-
+//-------------SECTION GROUP---------------------//
 section#group{
   text-align: center;
-  padding: 8vh 0;
+}
+//-------------SECTION ARE-HAVE-------------------//
+section#are-have{
+  background-color: #2B233A;
+  border: 1px solid #707070;
+  padding: 90px 0;
+  .gif{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 40px;
+    text-align: center;
+  }
+  img{
+    width: 100px;
+  }
+  h4{
+    font-weight: 700;
+    color: #D0D0D0;
+
+  }
 }
 /*----------------------------Queries-------------------------------*/
 
@@ -153,6 +173,11 @@ section#group{
       height: 20px;
     }
   }
+  section#are-have{
+    .gif{
+      grid-template-columns: 1fr 1fr;
+    }
+  }
 }
 
 @media (max-width: 575.98px) {
@@ -175,6 +200,12 @@ section#group{
     .owl-next span {
       width: 15px;
       height: 14px;
+    }
+  }
+  section#are-have{
+    .gif{
+      grid-template-columns: 1fr;
+      grid-gap: 30px;
     }
   }
 
