--- a/assets/styles/scss/components/_master.scss
+++ b/assets/styles/scss/components/_master.scss
@@ -124,13 +124,61 @@ section#are-have{
 
   }
 }
+  //-------------SECTION INVESTMENT---------------------//
+  section#investment{
+    text-align: center;
+    .item1{
+      background-image: url(../../images/investiment.png);
+      background-repeat: no-repeat;
+      height: 456px;
+      max-width: 407px;
+      width: 100%;
+      background-size: contain;
+      padding: 40px 0;
+      h3{
+        margin-top: 231px;
+      }
+
+    }
+    .item2{
+      background-image: url(../../images/investiment.png);
+      background-repeat: no-repeat;
+      height: 456px;
+      max-width: 407px;
+      width: 100%;
+      background-size: contain;
+      padding: 40px 0;
+      h3{
+        margin-top: 207px;
+      }
+
+    }
+    .item3{
+      background-image: url(../../images/investiment.png);
+      background-repeat: no-repeat;
+      height: 456px;
+      max-width: 407px;
+      width: 100%;
+      background-size: contain;
+      padding: 40px 0;
+      h3{
+        margin-top: 207px;
+      }
+    }
+    h2{
+      color: $primary;
+    }
+    h5, h3{
+      color: $white;
+    }
+  }
 /*----------------------------Queries-------------------------------*/
 
-@media (max-width: 1399.98px) {}
+@media (max-width: 1399px) {}
 
-@media (max-width: 1199.98px) {}
+@media (max-width: 1199px) {}
 
-@media (max-width: 991.98px) {
+@media (max-width: 991px) {
   section#image-carousel {
     .owl-prev {
     width: 50px;
@@ -149,9 +197,29 @@ section#are-have{
       height: 20px;
     }
   }
+  section#investment{
+    .item1{
+      margin-bottom: 50px;
+      h3{
+        margin-top: 240px;
+      }
+    }
+    .item2{
+      margin-bottom: 50px;
+      h3{
+        margin-top: 216px;
+      }
+    }
+    .item3{
+      margin-bottom: 50px;
+      h3{
+        margin-top: 216px;
+      }
+    }
+  }
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 767px) {
   section#image-carousel {
     .titleCarousel {
       top: 15%;
@@ -178,9 +246,29 @@ section#are-have{
       grid-template-columns: 1fr 1fr;
     }
   }
+  section#investment{
+    .item1{
+      margin-bottom: 50px;
+      h3{
+        margin-top: 245px;
+      }
+    }
+    .item2{
+      margin-bottom: 50px;
+      h3{
+        margin-top: 221px;
+      }
+    }
+    .item3{
+      margin-bottom: 50px;
+      h3{
+        margin-top: 221px;
+      }
+    }
+  }
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 575px) {
   section#image-carousel {
     .titleCarousel {
       top: 10%;
@@ -206,6 +294,26 @@ section#are-have{
     .gif{
       grid-template-columns: 1fr;
       grid-gap: 30px;
+    }
+  }
+  section#investment{
+    .item1{
+      margin-bottom: 50px;
+      h3{
+        margin-top: 250px;
+      }
+    }
+    .item2{
+      margin-bottom: 50px;
+      h3{
+        margin-top: 226px;
+      }
+    }
+    .item3{
+      margin-bottom: 50px;
+      h3{
+        margin-top: 226px;
+      }
     }
   }
 
