--- a/assets/styles/scss/components/_master.scss
+++ b/assets/styles/scss/components/_master.scss
@@ -127,43 +127,41 @@ section#are-have{
   //-------------SECTION INVESTMENT---------------------//
   section#investment{
     text-align: center;
-    .item1{
-      background-image: url(../../images/investiment.png);
-      background-repeat: no-repeat;
-      height: 456px;
-      max-width: 407px;
-      width: 100%;
-      background-size: contain;
-      padding: 40px 0;
-      h3{
-        margin-top: 231px;
-      }
-
+    .grid-investment{
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-column-gap: 30px;
     }
-    .item2{
-      background-image: url(../../images/investiment.png);
-      background-repeat: no-repeat;
+    .investment{
+      position: relative;
       height: 456px;
       max-width: 407px;
       width: 100%;
-      background-size: contain;
       padding: 40px 0;
-      h3{
-        margin-top: 207px;
-      }
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
 
+      a.btn.btn-primary {
+        position: absolute;
+        top: 430px;
+      }
     }
-    .item3{
+    .PGA{
       background-image: url(../../images/investiment.png);
       background-repeat: no-repeat;
-      height: 456px;
-      max-width: 407px;
-      width: 100%;
-      background-size: contain;
-      padding: 40px 0;
-      h3{
-        margin-top: 207px;
-      }
+      background-size: cover;
+    }
+    .Negocios{
+      background-image: url(../../images/investiment.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+   .Construccion{
+      background-image: url(../../images/investiment.png);
+      background-repeat: no-repeat;
+      background-size: cover;
     }
     h2{
       color: $primary;
@@ -171,6 +169,7 @@ section#are-have{
     h5, h3{
       color: $white;
     }
+
   }
 /*----------------------------Queries-------------------------------*/
 
@@ -195,26 +194,6 @@ section#are-have{
     .owl-next span {
       width: 21px;
       height: 20px;
-    }
-  }
-  section#investment{
-    .item1{
-      margin-bottom: 50px;
-      h3{
-        margin-top: 240px;
-      }
-    }
-    .item2{
-      margin-bottom: 50px;
-      h3{
-        margin-top: 216px;
-      }
-    }
-    .item3{
-      margin-bottom: 50px;
-      h3{
-        margin-top: 216px;
-      }
     }
   }
 }
@@ -247,23 +226,9 @@ section#are-have{
     }
   }
   section#investment{
-    .item1{
-      margin-bottom: 50px;
-      h3{
-        margin-top: 245px;
-      }
-    }
-    .item2{
-      margin-bottom: 50px;
-      h3{
-        margin-top: 221px;
-      }
-    }
-    .item3{
-      margin-bottom: 50px;
-      h3{
-        margin-top: 221px;
-      }
+    .grid-investment{
+      grid-template-columns: 1fr;
+      grid-gap: 50px;
     }
   }
 }
@@ -294,26 +259,6 @@ section#are-have{
     .gif{
       grid-template-columns: 1fr;
       grid-gap: 30px;
-    }
-  }
-  section#investment{
-    .item1{
-      margin-bottom: 50px;
-      h3{
-        margin-top: 250px;
-      }
-    }
-    .item2{
-      margin-bottom: 50px;
-      h3{
-        margin-top: 226px;
-      }
-    }
-    .item3{
-      margin-bottom: 50px;
-      h3{
-        margin-top: 226px;
-      }
     }
   }
 
