--- a/assets/styles/scss/components/_master.scss
+++ b/assets/styles/scss/components/_master.scss
@@ -124,58 +124,130 @@ section#are-have{
 
   }
 }
-  //-------------SECTION INVESTMENT---------------------//
-  section#investment{
-    text-align: center;
-    .grid-investment{
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-column-gap: 30px;
-    }
-    .investment{
-      position: relative;
-      height: 456px;
-      max-width: 407px;
-      width: 100%;
-      padding: 40px 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-
-      a.btn.btn-primary {
-        position: absolute;
-        top: 430px;
-      }
-    }
-    .PGA{
-      background-image: url(../../images/investiment.png);
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-    .Negocios{
-      background-image: url(../../images/investiment.png);
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-   .Construccion{
-      background-image: url(../../images/investiment.png);
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-    h2{
-      color: $primary;
-    }
-    h5, h3{
-      color: $white;
-    }
-
+//-------------SECTION INVESTMENT---------------------//
+section#investment{
+  text-align: center;
+ .grid-investment{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 30px;
   }
+  .investment{
+    position: relative;
+    height: 456px;
+    max-width: 407px;
+    width: 100%;
+    padding: 40px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    a.btn.btn-primary {
+      position: absolute;
+      top: 430px;
+    }
+  }
+ .PGA{
+    background-image: url(../../images/investiment.png);
+  }
+ .Negocios{
+    background-image: url(../../images/investiment.png);
+  }
+ .Construccion{
+    background-image: url(../../images/investiment.png);
+  }
+  h2{
+    color: $primary;
+  }
+  h5, h3{
+    color: $white;
+  }
+}
+//-------------SECTION managementI---------------------//
+section#managementI{
+  padding-bottom: 130px;
+  background-image: url(../../images/gerencia.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .managementI {
+    position:relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .giftransparent{
+    padding: 40px 20px;
+    background-color: rgba(256,256,256,0.79);
+    border-radius: 20px;
+    // opacity: 0.79;
+    position:relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 835px;
+    max-height: 211px;
+    width: 100%;
+    height: 100%;
+    margin-top: 16px
+  }
+  a.btn.btn-primary {
+    position: absolute;
+    top: 350px;
+  }
+  img{
+    width: 100px;
+  }
+  h3{
+    color: $textgray;
+    font-weight: 700;
+  }
+  .display6{
+    color: $text;
+    font-weight: 700;
+  }
+  h4{
+    color: $steelgray;
+    font-weight: 700;
+  }
+}
+//-------------SECTION managementI---------------------//
+section#managementII{
+  background-color: #DEB83D;
+  h1{
+    color: $btn-white;
+    font-weight: 700;
+  }
+  h4{
+    color: $white;
+    font-weight: 700;
+  }
+  img{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 400px;
+  }
+}
+
 /*----------------------------Queries-------------------------------*/
 
 @media (max-width: 1399px) {}
 
-@media (max-width: 1199px) {}
+@media (max-width: 1199px) {
+   section#managementI {
+    a.btn.btn-primary {
+      top: 340px;
+    }
+  }
+}
 
 @media (max-width: 991px) {
   section#image-carousel {
@@ -195,6 +267,16 @@ section#are-have{
       width: 21px;
       height: 20px;
     }
+  }
+  section#managementI {
+    a.btn.btn-primary {
+      top: 330px;
+    }
+  }
+  section#managementII{
+    // img{
+    //   width: 50%;
+    // }
   }
 }
 
@@ -229,6 +311,31 @@ section#are-have{
     .grid-investment{
       grid-template-columns: 1fr;
       grid-gap: 50px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  section#managementI{
+    .giftransparent{
+      padding: 40px 20px;
+      grid-template-columns: 1fr;
+      max-width: 335px;
+      max-height: 500px;
+      width: 100%;
+      height: 100%;
+    }
+    a.btn.btn-primary {
+      top: 600px;
+    }
+  }
+   section#managementII{
+    .textm {
+      padding-top: 250px;
+    }
+    img{
+      bottom: 180px
     }
   }
 }
@@ -261,5 +368,28 @@ section#are-have{
       grid-gap: 30px;
     }
   }
+  section#managementII{
+    .textm {
+      padding-top: 250px;
+    }
+    img{
+      bottom: 200px
+    }
+  }
 
+}
+@media (max-width: 380px) {
+  section#managementI{
+    a.btn.btn-primary {
+      top: 625px;
+    }
+  }
+  section#managementII{
+    .textm {
+      padding-top: 200px;
+    }
+    img{
+      bottom: 220px
+    }
+  }
 }
