--- a/assets/styles/scss/components/_master.scss
+++ b/assets/styles/scss/components/_master.scss
@@ -166,7 +166,7 @@ section#investment{
     color: $white;
   }
 }
-//-------------SECTION managementI---------------------//
+//-------------SECTION MANAGEMENTI---------------------//
 section#managementI{
   padding-bottom: 130px;
   background-image: url(../../images/gerencia.jpg);
@@ -188,7 +188,6 @@ section#managementI{
     padding: 40px 20px;
     background-color: rgba(256,256,256,0.79);
     border-radius: 20px;
-    // opacity: 0.79;
     position:relative;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -218,7 +217,7 @@ section#managementI{
     font-weight: 700;
   }
 }
-//-------------SECTION managementI---------------------//
+//-------------SECTION MANAGEMENTII---------------------//
 section#managementII{
   background-color: #DEB83D;
   h1{
@@ -234,6 +233,86 @@ section#managementII{
     right: 0;
     bottom: 0;
     width: 400px;
+  }
+}
+//-------------SECTION CONTACT---------------------//
+section#contact{
+  background-color: $steelgray;
+  padding: 12vh 0;
+  h2{
+    color: $white;
+  }
+  .contact-center{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  input {
+    margin-bottom: 10px;
+    border-radius: 0;
+  }
+  textarea {
+    border-radius: 0;
+    width: 100%;
+  }
+  .contactForm{
+    max-width: 500px;
+    width: 100%;
+  }
+  p.strong {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+
+  p.strong span {
+    background: #fff;
+    height: 6px;
+    width: 6px;
+    border-radius: 100%;
+    margin: 0 3px;
+  }
+  p.strong span:first-child {
+    margin-left: 6px;
+  }
+}
+//----------------------------FOOTER---------------------------------//
+footer{
+  background-color: #0B422F;
+  padding: 10vh 0;
+  h5, a{
+    color: $white;
+    text-decoration: none;
+  }
+  a:hover{
+    color: $white;
+  }
+  .line{
+    border: 1px solid $textgray;
+    max-width: 270px;
+    width: 100%;
+    margin-bottom: 30px
+  }
+  .logo {
+    width: 300px;
+  }
+  .ifooter2{
+    width: 30px;
+    filter: invert(1);
+    padding-right: 12px;
+  }
+  .ifooter3{
+    width: 55px;
+    filter: invert(1);
+    padding-right: 15px;
+  }
+  .conatct3 {
+    text-align: end;
+    top: 0;
+    bottom: 0;
+    margin-top: auto;
+    margin-bottom: auto;
   }
 }
 
@@ -273,11 +352,7 @@ section#managementII{
       top: 330px;
     }
   }
-  section#managementII{
-    // img{
-    //   width: 50%;
-    // }
-  }
+
 }
 
 @media (max-width: 767px) {
@@ -322,12 +397,15 @@ section#managementII{
       padding: 40px 20px;
       grid-template-columns: 1fr;
       max-width: 335px;
-      max-height: 500px;
+      max-height: 600px;
       width: 100%;
       height: 100%;
     }
+    .ranchers {
+    padding-top: 20px;
+  }
     a.btn.btn-primary {
-      top: 600px;
+      top: 665px;
     }
   }
    section#managementII{
@@ -336,6 +414,18 @@ section#managementII{
     }
     img{
       bottom: 180px
+    }
+  }
+  footer{
+    text-align: center;
+    .line {
+      left: 0;
+      right: 0;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .contact2, .contact3{
+      padding-top: 40px;
     }
   }
 }
@@ -381,7 +471,7 @@ section#managementII{
 @media (max-width: 380px) {
   section#managementI{
     a.btn.btn-primary {
-      top: 625px;
+      top: 680px;
     }
   }
   section#managementII{
