--- a/assets/styles/scss/components/_navbar.scss
+++ b/assets/styles/scss/components/_navbar.scss
@@ -4,44 +4,46 @@ header {
     a{
         color: $stylewhite !important;
     }
-    .left {
+    .navbar-expand-lg {
+         justify-content: space-between;
+    }
+    .navbar-collapse {
+        width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        align-items: flex-end;
+        justify-content: flex-end;
+    }
+    .dropdown-toggle::after{
+        display: none ;
+    }
+    .dropdown-menu{
+        width: 781px;
+        height: 364px;
+        left: -300px;
+        position: absolute;
         align-items: center;
 
-        .right{
-            .dropdown-toggle::after{
-                display: none ;
-            }
-            .dropdown-menu{
-                width: 781px;
-                height: 364px;
-                left: -300px;
-                position: absolute;
-                align-items: center;
-
-                .grid-menu{
-                    display: grid;
-                    grid-template-columns: 1fr 1fr;
-                    grid-gap: 40px;
-                }
-                h6 {
-                    margin-bottom: 14px;
-                }
-                a{
-                    color: $primary !important;
-                }
-                span.dropdown-item {
-                    display: flex;
-                    flex-direction: row;
-                    align-items: flex-end;
-                    column-gap: 20px;
-                    filter: none;
-                }
+        .grid-menu{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-gap: 40px;
+        }
+        h6 {
+            margin-bottom: 14px;
+        }
+        a{
+            color: $primary !important;
+        }
+        span.dropdown-item {
+            display: flex;
+            flex-direction: row;
+            align-items: flex-end;
+            column-gap: 20px;
+            filter: none;
             }
         }
-    }
+
     li:not(:last-child) {
         padding: 0 10px;
     }
@@ -70,29 +72,17 @@ header {
         li {
             padding: 0 10px;
         }
-        .left{
+        .dropdown-menu {
+            width: 400px;
+            height: 665px;
+            left: 0;
+            position: absolute;
+            align-items: center;
 
-
-            .right {
-
-               .dropdown-menu {
-                    width: 400px;
-                    height: 665px;
-                    left: -260px;
-                    position: absolute;
-                    align-items: center;
-
-                    .grid-menu{
-                        grid-template-columns: 1fr;
-
-                    }
-
-                }
+            .grid-menu{
+                grid-template-columns: 1fr;
             }
-
-
         }
-
    }
 
 }
