2114 01112021 menu-mega III

--- a/assets/styles/scss/components/_master.scss
+++ b/assets/styles/scss/components/_master.scss
@@ -16,9 +16,9 @@ a,p,div,input,button,textarea{
   color: $text-secondary;
 }
 
-img {
-  max-width: 100%;
-}
+// img {
+//   max-width: 100%;
+// }
 
 section {
   position: relative;
