--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -18,7 +18,7 @@
                         </div>
                         <div class="mtext">
                           <h6>PGA<br><strong>Rentabilidad<br>asegurada</strong> hasta 10% anual</h6>
-                          <a href="#">Conocé más</a>
+                          <a href="PGA.html">Conocé más</a>
                         </div>
                       </span></div>
                       <div class="imenu"><span class="dropdown-item">
