--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -52,7 +52,7 @@
                   </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Nosotros</a>
+                  <a class="nav-link" href="Nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Soy inversor</a>
