--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -2,7 +2,7 @@
       <div class="row">
         <div class="col-12 col-nav">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#"><img src="assets/images/Component2.svg" alt="Larrarte"></a>
+            <a class="navbar-brand" href="index.html"><img src="assets/images/Component2.svg" alt="Larrarte"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -35,8 +35,8 @@
                           <img src="assets/images/menu2.png" alt="Larrarte">
                         </div>
                         <div class="mtext">
-                          <h6><strong>Negocios Ganaderosz<br></strong>Administración, <br>Remates, Inmobiliaria</h6>
-                           <a href="#">Conocé más</a>
+                          <h6><strong>Negocios Ganaderos<br></strong>Administración, <br>Remates, Inmobiliaria</h6>
+                           <a href="Administracion.html">Conocé más</a>
                         </div>
                       </span></div>
                       <div class="imenu"><span class="dropdown-item">
