--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="mtext">
                           <h6>Forestales<br><strong>Rentabilidad<br></strong>de 7% a 12%<br>anual</h6>
-                          <a href="#">Conocé más</a>
+                          <a href="Negocios.html">Conocé más</a>
                         </div>
                       </span></div>
                       <div class="imenu"><span class="dropdown-item">
