--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="mtext">
                           <h6><strong>Negocios Inmobiliarios<br></strong> hasta 9% anual<br>larrarteurbano.com.uy</h6>
-                          <a href="#">Conocé más</a>
+                          <a href="Administracion.html">Conocé más</a>
                         </div>
                       </span></div>
                     </div>
@@ -58,7 +58,7 @@
                   <a class="nav-link" href="#">Soy inversor</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contacto</a>
+                  <a class="nav-link" href="#contact">Contacto</a>
                 </li>
               </ul>
             </div>
