--- a/assets/styles/scss/components/_navbar.scss
+++ b/assets/styles/scss/components/_navbar.scss
@@ -1,8 +1,19 @@
 header {
     background-color: $steelgray;
-
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+    max-width: 100 vw;
+    top: 0;
+    left: 0;
     a{
         color: $stylewhite !important;
+    }
+    .nav-item:active {
+        background-color: #DEB83D;
+        a{
+            color: #2b233a !important;
+        }
     }
     .navbar-expand-lg {
          justify-content: space-between;
@@ -13,6 +24,14 @@ header {
         flex-direction: row;
         align-items: flex-end;
         justify-content: flex-end;
+        li.nav-item {
+            width: 112px;
+            height: 71px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
     }
     .dropdown-toggle::after{
         display: none ;
@@ -42,10 +61,6 @@ header {
             filter: none;
             }
         }
-
-    li:not(:last-child) {
-        padding: 0 10px;
-    }
     span{
         background-image: url(assets/images/bars-white.svg);
         filter: invert(100%);
@@ -56,6 +71,9 @@ header {
     }
     .navbar {
         padding: 0;
+    }
+    .navbar-toggler {
+        transition: box-shadow .15s ease-in-out;
     }
 
 }
@@ -68,6 +86,7 @@ header {
 
 @media (max-width: 991px) {
     header{
+
         li {
             padding: 0 10px;
         }
@@ -78,8 +97,34 @@ header {
                 grid-template-columns: 1fr;
             }
         }
-   }
-
+        .nav-item:active {
+            background-color:  $steelgray;
+            // a{
+            //     color: $stylewhite !important;
+            // }
+        }
+        .dropdown-menu {
+            background-color: rgb(255 255 255 / 50%);
+            margin-bottom: 10px;
+        }
+        .navbar-collapse {
+            justify-content: flex-start;
+            border-top: 2px solid #deb83d;
+            margin-top: 10px;
+            .navbar-nav {
+                width: 100%;
+                li.nav-item {
+                    align-items: flex-start;
+                    width: auto;
+                    height: auto;
+                }
+                .nav-item:not(:last-child) {
+                    border-bottom: solid 1px #ffffff50;
+                    width: 100%;
+                }
+            }
+        }
+    }
 }
 
 @media (max-width: 767px) {}
