--- a/assets/styles/scss/components/_navbar.scss
+++ b/assets/styles/scss/components/_navbar.scss
@@ -36,6 +36,10 @@ header {
     .dropdown-toggle::after{
         display: none ;
     }
+    .dropdown-item:focus, .dropdown-item:hover {
+        color: #deb83d;
+        background-color: #f8f9fa;
+    }
     .dropdown-menu{
         left: -380px;
         padding:30px;
@@ -49,10 +53,20 @@ header {
         h6 {
             margin-bottom: 14px;
         }
-        a{
+        .mtext a{
             color: $primary !important;
             text-decoration: none;
         }
+        .mtext{ a:hover{
+            background-color: $primary;
+            border-color: $primary;
+            border-radius: 0;
+            padding: 10px 30px;
+            color: $btn-white !important;
+            box-shadow: 0px 3px 6px #00000029;
+            border-radius: 29px;
+            opacity: 1;
+        }}
         span.dropdown-item {
             display: flex;
             flex-direction: row;
