--- a/assets/components/footer.html
+++ b/assets/components/footer.html
@@ -9,14 +9,18 @@
         <div class="col-lg-4 col-12 contact2">
           <h5 class="mb-1">Contacto</h5>
           <div class="line"></div>
-          <h5 class="mb-3"><a href="#" target="_blank" onclick='return false'><img src="assets/images/email.svg" alt="Email" class="ifooter2">gestionlarrarte@gmail.com</a></h5>
-          <h5 class="mb-3"><a href="#" target="_blank" onclick='return false'><img src="assets/images/phone.svg" alt="Telephone" class="ifooter2">2407 0035</a></h5>
-          <h5 class="mb-3"><a href="#" target="_blank" onclick='return false'><img src="assets/images/mobile.svg" alt="Mobil" class="ifooter2">099 545 787</a></h5>
+          <h5><a href="#" target="_blank" onclick='return false'><img src="assets/images/email.svg" alt="Email" class="ifooter2">gestionlarrarte@gmail.com</a></h5>
+          <h5><a href="#" target="_blank" onclick='return false'><img src="assets/images/phone.svg" alt="Telephone" class="ifooter2">2407 0035</a></h5>
+          <h5><a href="#" target="_blank" onclick='return false'><img src="assets/images/mobile.svg" alt="Mobil" class="ifooter2">099 545 787</a></h5>
         </div>
         <div class="col-lg-4 col-12 contact3">
-          <img src="assets/images/group-footer.png" alt="Larrarte" class="logo"><br>
-          <a href="#" target="_blank" onclick='return false' ><img src="assets/images/facebook.svg" alt="Facebook" class="ifooter3"></a>
-          <a href="#" target="_blank" onclick='return false'><img src="assets/images/instagram.svg" alt="Instagram" class="ifooter3"></a>
+          <div class="contac-img">
+            <img src="assets/images/group-footer.png" alt="Larrarte" class="logo">
+          </div>
+          <div class="contac-red">
+            <a href="#" target="_blank" onclick='return false' ><img src="assets/images/facebook.svg" alt="Facebook" class="ifooter3"></a>
+            <a href="#" target="_blank" onclick='return false'><img src="assets/images/instagram.svg" alt="Instagram" class="ifooter3"></a>
+          </div>
         </div>
       </div>
     </div>
