--- a/assets/styles/scss/components/_footer.scss
+++ b/assets/styles/scss/components/_footer.scss
@@ -1,3 +1,39 @@
+//----------------------------FOOTER---------------------------------//
+footer{
+  background-color: #0B422F;
+  padding: 10vh 0;
+
+  h5, a{
+    color: $white;
+    text-decoration: none;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  a:hover{
+    color: $white;
+  }
+  .line{
+    border: 1px solid $textgray;
+    max-width: 270px;
+    width: 100%;
+    margin-bottom: 30px
+  }
+  .logo {
+    width: 300px;
+  }
+  .ifooter2{
+    padding-right: 12px;
+  }
+  .ifooter3{
+    padding-right: 15px;
+  }
+  .contact3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-end;
+  }
+}
 
 /*----------------------------Queries-------------------------------*/
 
@@ -5,7 +41,24 @@
 
 @media (max-width: 1199.98px) {}
 
-@media (max-width: 991.98px) {}
+@media (max-width: 991.98px) {
+    footer{
+    text-align: left;
+    h5{
+      margin-bottom: 30px;
+    }
+
+    .contact2, .contact3{
+      padding-top: 40px;
+    }
+    .contact3 {
+      align-items: flex-start;
+      .contac-img {
+        margin-bottom: 40px;
+      }
+    }
+  }
+}
 
 @media (max-width: 767.98px) {}
 
