--- a/assets/styles/scss/components/_master.scss
+++ b/assets/styles/scss/components/_master.scss
@@ -14,11 +14,13 @@ p.h1, h1, p.h2, h2, p.h3, h3, p.h4, h4, p.h5, h5, p.h6, h6 {
 a,p,div,input,button,textarea{
   font-family: Roboto;
   color: $text-secondary;
+  font-size: 1rem;
+  font-weight: 400;
 }
+a{
+  font-size: 1rem;
 
-// img {
-//   max-width: 100%;
-// }
+}
 
 section {
   position: relative;
@@ -54,9 +56,6 @@ section#image-carousel{
     }
     h1{
       color: $white;
-      font-weight: 600;
-    }
-    h1.display-4{
       font-weight: 600;
     }
   }
@@ -163,6 +162,7 @@ section#investment{
     justify-content: space-between;
     background-repeat: no-repeat;
     background-size: cover;
+    filter: brightness(0.8);
 
     a.btn.btn-primary {
       position: absolute;
@@ -180,9 +180,11 @@ section#investment{
   }
   h2{
     color: $primary;
+    font-weight: 700;
   }
   h5, h3{
     color: $white;
+    font-weight: 700;
   }
 }
 //-------------SECTION MANAGEMENTI---------------------//
@@ -195,6 +197,7 @@ section#managementI{
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-position: center;
 
   .managementI {
     position:relative;
@@ -225,7 +228,7 @@ section#managementI{
   }
   a.btn.btn-primary {
     position: absolute;
-    top: 365px;
+    top: 370px;
   }
 
   h3{
@@ -233,7 +236,7 @@ section#managementI{
     font-weight: 700;
     margin-bottom: 15px;
   }
-  h1.display6{
+  h1.display-6{
     color: $text;
     font-weight: 700;
   }
@@ -249,6 +252,7 @@ section#managementII{
   h1{
     color: $btn-white;
     font-weight: 700;
+    margin-bottom: 14px;
   }
   h4{
     color: $white;
@@ -267,6 +271,7 @@ section#contact{
   padding: 12vh 0;
   h2{
     color: $white;
+    font-weight: 700;
   }
   .contact-center{
     display: flex;
@@ -303,46 +308,11 @@ section#contact{
     margin-left: 6px;
   }
 }
-//----------------------------FOOTER---------------------------------//
-footer{
-  background-color: #0B422F;
-  padding: 10vh 0;
 
-  h5, a{
-    color: $white;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  a:hover{
-    color: $white;
-  }
-  .line{
-    border: 1px solid $textgray;
-    max-width: 270px;
-    width: 100%;
-    margin-bottom: 30px
-  }
-  .logo {
-    width: 300px;
-  }
-  .ifooter2{
-    padding-right: 12px;
-  }
-  .ifooter3{
-    padding-right: 15px;
-  }
-  .contact3 {
-    text-align: end;
-    top: 0;
-    bottom: 0;
-    margin-top: auto;
-    margin-bottom: auto;
-  }
-}
 //--------------------------------------------PGA.HTML----------------------------------------//
 //----------------------------image-banner---------------------------------//
 section#image-banner{
-    background-image: url(../../images/pga.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../images/pga.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
@@ -359,11 +329,11 @@ section#image-banner{
 }
 //----------------------------dynamic-table---------------------------------//
 section#dynamic-table{
-  h5{
-    text-align: center;
-  }
   h6{
     color: $white;
+  }
+  p{
+    font-weight: 700;
   }
     .list1:not(:last-child){
       border-bottom: 1px solid #00000059;
@@ -371,12 +341,19 @@ section#dynamic-table{
 
     .list1{
       background-color: $steelgray;
-      color: white;
-      img {
-      width: 27px;
-      padding-right: 10px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding: 0.5rem 0.5rem 0.5rem 0.8rem;
+      p{
+        color: white;
+      }
+      .img-list {
+        width: 40px;
+        text-align: center;
+        margin-right: 15px;
+      }
     }
-  }
   .col-left {
     display: flex;
     flex-direction: column;
@@ -391,6 +368,9 @@ section#dynamic-table{
   }
   .list-group-item:not(:last-child) {
     border-bottom: 1px solid #373948;
+  }
+  .list-group-item{
+  padding: 0.5rem 0.5rem;
   }
   .card{
 
@@ -414,12 +394,14 @@ section#scheme{
       grid-template-columns: 8% 1fr 8% 1fr 8% 1fr;
       align-items: center;
       grid-column-gap: 10px;
+      grid-row-gap: 43px;
         h5, .display-1{
         color: $white;
         font-weight: bold;
       }
       .display-1{
         text-align: center;
+        font-size: 90px;
       }
     }
 }
@@ -436,13 +418,25 @@ section#questions{
     div#collapseOne {
       border: none;
     }
+    .accordion-body{
+      font-size: 1rem;
+      font-weight: 600;
+      color: #373948;
+    }
     h4{
       font-weight: bold;
+
       button.accordion-button.collapsed {
       background-color: #F4F4F4;
       border: none;
       box-shadow: none;
+      text-align: left;
       }
+      .accordion-button{
+        font-size: 1.5rem;
+        font-weight: 700;
+      }
+
       .accordion-button:not(.collapsed) {
         color: #373948;
         background-color: #f4f4f4;
@@ -477,6 +471,10 @@ section#directors{
       margin-bottom: 10px;
     .card{
       border: none;
+      .card-body {
+        flex: 1 1 auto;
+        padding: 1rem 1rem 1rem 0rem;
+      }
       img.card-img-top {
         height: 284px;
         width: 288px;
@@ -520,7 +518,7 @@ section#cabins{
 //--------------------------------------------Administracion.HTML----------------------------------------//
 //----------------------------company---------------------------------//
 section#image-abanner{
-    background-image: url(../../images/menu2.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../images/menu2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
@@ -558,8 +556,11 @@ section#card-experience{
       border-radius: 0;
       .row.g-0 {
         align-items: center;
+        .img-fluid {
+          width: 100%;
+        }
         .card-body {
-          padding: 78px;
+          padding: 0 78px;
           h2{
             font-weight: bold;
             margin-bottom: 53px;
@@ -572,7 +573,7 @@ section#card-experience{
 //--------------------------------------------Negocios.HTML----------------------------------------//
 //----------------------------nimage-banner---------------------------------//
 section#nimage-banner{
-    background-image: url(../../images/menu3.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../images/menu3.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
@@ -619,6 +620,7 @@ section#benefits{
     }
     h5{
       color: $white;
+      font-weight: 700;
     }
 
 
@@ -627,12 +629,19 @@ section#benefits{
 
 /*----------------------------Queries-------------------------------*/
 
-@media (max-width: 1399px) {}
+@media (min-width: 1399px) {
+  section#managementI{
+    a.btn.btn-primary {
+      position: absolute;
+      top: 390px;
+    }
+  }
+}
 
 @media (max-width: 1199px) {
    section#managementI {
     a.btn.btn-primary {
-      top: 340px;
+      top: 385px;
     }
   }
 }
@@ -692,31 +701,20 @@ section#benefits{
     img{
       display: none;
     }
-  }
-
-  footer{
-    text-align: center;
-    .line {
-      left: 0;
-      right: 0;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .contact2, .contact3{
-      padding-top: 40px;
-    }
-    .contact3 {
-      text-align: center;
+    h1 {
+      margin-bottom: 10px;
     }
   }
-
   section#scheme{
     padding: 8vh 0;
     .display-5{
-        margin-bottom: 30px;
-      }
+      margin-bottom: 30px;
+    }
     .gridscheme{
       grid-template-columns: 15% 1fr;
+      h1.display-1 {
+        font-size: 82px;
+      }
     }
   }
   section#questions{
@@ -730,10 +728,16 @@ section#benefits{
     .img-fluid {
     width: 100vw;
     }
-    h2{
-      margin-bottom: 18px;
+    .cexperience .card .row.g-0 {
+      .card-body {
+        padding: 31px;
+        h2{
+          margin-bottom: 18px;
+        }
+      }
     }
   }
+
   section#benefits{
     padding: 8vh 0;
     display: flex;
